feat:add kafka sync message support