@@ -16,6 +16,7 @@ import wang.diff.user.server.entity.User;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @Slf4j
@@ -35,7 +36,7 @@ public class UserManageController implements UserManageApi {
             httpServletResponse.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
             httpServletResponse.setCharacterEncoding("utf-8");
             // 这里URLEncoder.encode可以防止中文乱码 当然和easyexcel没有关系
-            String fileName = URLEncoder.encode("测试", "UTF-8").replaceAll("\\+", "%20");
+            String fileName = URLEncoder.encode("测试", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
             httpServletResponse.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
             final List<User> users = userMapper.selectList(null);
             EasyExcel.write(httpServletResponse.getOutputStream(), User.class).sheet("模板").doWrite(users);
